Fix comments when too long, never breaks words

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -122,6 +122,7 @@ center {
 #eachComment p {
     text-align: center;
     width: 100vw;
+    overflow-wrap: break-word;
 }
 #eachComment button {
     /* position: absolute; */
